...
        ) {
            FittedText(2, 4.sp, wallyTileHeader()) { mod, ts, onTlr ->
                Text(
                  text = currencyCode,
                  style = ts,
                  textAlign = TextAlign.Center,
                  modifier = mod.testTag("AccountPillCurrencyCode"),
                  onTextLayout = onTlr
                )
                Spacer(modifier = Modifier.width(8.dp))
                Text(
                  text = bal,
                  style = ts,
                  textAlign = TextAlign.Center,
                  modifier = mod.testTag("AccountPillBalance"),
                  onTextLayout = onTlr
                )
            }
        }
        Spacer(Modifier.height(8.dp))
        Row(
...
                Text(
                  text = fiatBalance,
                  style = MaterialTheme.typography.labelLarge.copy(
                    color = Color.White
                  ),
                  textAlign = TextAlign.Center,
                  modifier = Modifier.testTag("AccountPillFiatBalance") // Added test tag
                )
                Spacer(Modifier.width(12.dp))
                VerticalDivider(
                  color = Color.White,
                  modifier = Modifier
                    .width(1.dp)
...
              text = act.name ?: "",
              style = MaterialTheme.typography.labelLarge.copy(
                color = Color.White,
                fontWeight = FontWeight.Bold
              ),
              textAlign = TextAlign.Center,
              modifier = Modifier.testTag("AccountPillAccountName")
            )
            Spacer(Modifier.width(12.dp))
            VerticalDivider(
              color = Color.White,
              modifier = Modifier
                .width(1.dp)
...
                        VerticalDivider(
                          color = Color.White,
                          modifier = verticalDividerModifier
                        )
                        IconTextButtonUi2(
                          icon = Icons.Outlined.ArrowDownward,
                          modifier = Modifier.weight(1f).testTag("ReceiveButton"),
                          description = i18n(S.Receive)
                        ) {
                            nav.go(ScreenId.Receive)
                        }
                        VerticalDivider(
                          color = Color.White,
...
